@@ -1,3 +1,13 @@
+2015-12-21  Ola Jeppsson  <ola@adapteva.com>
+
+	* e-hal/src/e-loader.c (clear_sram): Take sram size from first chip in
+	e_platform structure.
+	* e-hal/src/epiphany-hal-data-local.h: Add E_ESIM chip, and
+	E_PARALLELLASIM platform.
+	* e-hal/src/epiphany-hal.c (e_init): Use chip configuration from
+	simulator configuration when target is esim.
+	(ee_hdf_from_sim_cfg): Implemented.
+
 2015-12-14  Ola Jeppsson  <ola@adapteva.com>
 
 	* e-hal/src/epiphany-hal.c (e_init): Remove conditional check for
